[package]
name = "srf"
version = "0.1.1"
authors = ["Andrew Mixkiv <andrewmixkiv@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to check surf forecasts"
readme = "README.md"
homepage = "https://github.com/ajesuscode/srf"
repository = "https://github.com/ajesuscode/srf"
keywords = ["surfing", "forecast", "surf"]
categories = ["command-line-utilities"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.80"
serde_with = "3.7.0"
chrono = "0.4.35"
indicatif = "0.17"
